# Pong-s-Utility-Box

./: .gitignore  Cargo.toml  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: index.html  main.js  styles.css
crates/pub-core/: Cargo.toml
crates/pub-core/src/: lib.rs
